# sff

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  main.cpp
dev/: install-hooks
dev/git-hooks/: pre-commit
ext/: CMakeLists.txt
qvterm/: CMakeLists.txt  highlight.cpp  highlight.hpp  qvterm.cpp  qvterm.hpp  region.cpp  region.hpp  scrollback.cpp  scrollback.hpp
